# polymarket-discord-bot

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-push.yaml  deploy.yaml  test.yaml
docs/: 1_thread_output_pattern.md  2_gamma_api.md  3_cog_lifecycle.md  features.md
scripts/: seed_dev_data.py
src/polymarket_bot/: __init__.py  __main__.py  bot.py  config.py  formatting.py  health.py  store.py  views.py
src/polymarket_bot/cogs/: commands.py  mispriced_markets.py  new_markets.py  opportunities.py  polymarket.py  trending_events.py  volume_movers.py
tests/: test_formatting.py  test_health.py  test_market_url.py  test_mispriced_markets.py  test_new_markets.py  test_opportunities.py  test_polymarket_api.py  test_precommit_setup.py  test_store.py  test_trending_events.py  test_volume_movers.py
