[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Polymarket Discord Bot"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4,<3",
    "aiohttp>=3.9,<4",
    "python-dotenv>=1.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_bot"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "black>=24",
    "flake8>=7",
    "requests>=2.31",
]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
